--- a/openfda4/search.html
+++ b/openfda4/search.html
@@ -5,7 +5,8 @@
 <body>
     <hl>Search OpenFDA Application</hl>
 <form>
-    Drug Label: <input type="text">
+    Drug Label: <input type="text"><br>
+    <input type="submit">
 </form>
 </body>
 </html>
