New trial of openfda-3

--- a/openfda-3/index.html
+++ b/openfda-3/index.html
@@ -1,7 +1,2 @@
-<!doctype html>
-<html>
-   <body style='background-color: green'>
-     <h1>Hi!</h2>
-     <p>I am the green server!</p>
-   </body>
-</html>
+<ol>
+<	><li>f229e866-5775-4e42-a316-8480dd92fec6<\li><	><li>59a7a4be-8303-4e81-8f0a-5e5751f5c47f<\li><	><li>2526af53-727b-43fb-bfab-b6ee86367456<\li><	><li>No drug found in this index<\li><	><li>No drug found in this index<\li><	><li>fd5ccac9-a54a-4284-80c8-a5f035c5d9e6<\li><	><li>6ab6ed0d-48fc-441d-a2eb-730ee71d6bbb<\li><	><li>576caff4-53ce-e3e9-e053-2991aa0a2450<\li><	><li>5b10cd71-5227-436d-8306-8fcaae73220d<\li><	><li>No drug found in this index<\li><\ol>
