--- a/openfda-3/trying3.html
+++ b/openfda-3/trying3.html
@@ -1,2 +1,2 @@
 <ol>
-<	>f229e866-5775-4e42-a316-8480dd92fec6<	>59a7a4be-8303-4e81-8f0a-5e5751f5c47f<	>2526af53-727b-43fb-bfab-b6ee86367456<	>No drug found in this index<	>No drug found in this index<	>fd5ccac9-a54a-4284-80c8-a5f035c5d9e6<	>6ab6ed0d-48fc-441d-a2eb-730ee71d6bbb<	>576caff4-53ce-e3e9-e053-2991aa0a2450<	>5b10cd71-5227-436d-8306-8fcaae73220d<	>No drug found in this index<\ol>
+<t><li>f229e866-5775-4e42-a316-8480dd92fec6<t><li>59a7a4be-8303-4e81-8f0a-5e5751f5c47f<t><li>2526af53-727b-43fb-bfab-b6ee86367456<t><li>No drug found in this index<t><li>No drug found in this index<t><li>fd5ccac9-a54a-4284-80c8-a5f035c5d9e6<t><li>6ab6ed0d-48fc-441d-a2eb-730ee71d6bbb<t><li>576caff4-53ce-e3e9-e053-2991aa0a2450<t><li>5b10cd71-5227-436d-8306-8fcaae73220d<t><li>No drug found in this index
