--- a/openfda-4/search.html
+++ b/openfda-4/search.html
@@ -3,7 +3,7 @@
     <title>Search OpenFDA</title>
 </head>
 <body>
-    <hl>Search OpenFDA Application</hl>
+    <h1>Search OpenFDA Application</h1>
 <form>
     Drug Label: <input type="text"><br>
     <input type="submit">
