--- a/openfda-4/search.html
+++ b/openfda-4/search.html
@@ -2,11 +2,13 @@
 <head>
     <title>Search OpenFDA</title>
 </head>
-<body>
+<body style="background-color:lavender;">
     <h1>Search OpenFDA Application</h1>
-<form>
-    Drug Label: <input type="text"><br>
+<form action="search">
+    Drug Label: <input name="Label"type="text"><br>
+    Limit: <input name="Limit"type="text"><br>
     <input type="submit">
 </form>
+
 </body>
 </html>
