--- a/openfda-project/search.html
+++ b/openfda-project/search.html
@@ -5,10 +5,10 @@
 </head>
 <body style="background-color:#DBF5F2;">
 
-
-    <h1>Search OpenFDA Application</h1>
+    <font face="impact">
+    <h1><MARQUEE WIDTH="40%" BEHAVIOR=ALTERNATE BGCOLOR="WHITE">Search OpenFDA Application</MARQUEE></h1></font>
 <form action="search active ingredient">
-    <p><h2>Search by the name of the active ingridient. A limit can be entered</h2></p>
+    <p><h2>Search by the name of the active ingredient. A limit can be entered</h2></p>
     Drug Label: <input name="Label"type="text"><br>
     Limit: <input name="Limit"type="text"><br>
     <input type="submit">
@@ -24,14 +24,14 @@
 </form>
 
 <form action="search druglist">
-    <p><h2>Search for a drug list.</h2></p>
+    <p><h2>Search for a drug list</h2></p>
     Drug List: <input name="Druglist"type="text"><br>
     <input type="submit">
 
 </form>
 
 <form action="search manufacturer list">
-    <p><h2>By introducing an inactive you get the drug that has it.</h2></p>
+    <p><h2>Search a drug by its manufacturer name</h2></p>
     Manufacturer List: <input name="Manufacturerlist"type="text"><br>
     <input type="submit">
 
