--- a/openfda-project/search.html
+++ b/openfda-project/search.html
@@ -7,7 +7,7 @@
 
     <font face="impact">
     <h1><MARQUEE WIDTH="40%" BEHAVIOR=ALTERNATE BGCOLOR="WHITE">Search OpenFDA Application</MARQUEE></h1></font>
-<form action="search active ingredient">
+<form action="search_active_ingredient">
     <p><h2>Search by the name of the active ingredient. A limit can be entered</h2></p>
     Drug Label: <input name="Label"type="text"><br>
     Limit: <input name="Limit"type="text"><br>
@@ -15,7 +15,7 @@
 
 </form>
 
-<form action="search manufacturer">
+<form action="search_manufacturer">
     <p><h2>Search by the name of the manufacturer of the drug. A limit can be entered</h2></p>
     Manufacturer: <input name="Manufacturer"type="text"><br>
     Limit: <input name="Limit"type="text"><br>
@@ -23,14 +23,14 @@
 
 </form>
 
-<form action="search druglist">
+<form action="search_druglist">
     <p><h2>Search for a drug list</h2></p>
     Drug List: <input name="Druglist"type="text"><br>
     <input type="submit">
 
 </form>
 
-<form action="search manufacturer list">
+<form action="search_manufacturer_list">
     <p><h2>Search a drug by its manufacturer name</h2></p>
     Manufacturer List: <input name="Manufacturerlist"type="text"><br>
     <input type="submit">
