--- a/openfda-project/active_ingredient.html
+++ b/openfda-project/active_ingredient.html
@@ -1,1 +1,1 @@
-<head>DRUGS' ID LIST</head><ol><t><li>Aspirin Adult low strength<t><li>aspirin
+<body style="background-color:indianred"><head><h1>DRUG'S BRAND NAMES</h1></head><ol><t><li>Aspirin Adult low strength<t><li>aspirin<t><li>Aspirin Enteric Coated
