--- a/openfda-project/search.html
+++ b/openfda-project/search.html
@@ -6,10 +6,10 @@
 <body style="background-color:#DBF5F2;">
 
     <font face="impact">
-    <h1><MARQUEE WIDTH="40%" BEHAVIOR=ALTERNATE BGCOLOR="WHITE">Search OpenFDA Application</MARQUEE></h1></font>
+    <h1><MARQUEE WIDTH="55%" BEHAVIOR=ALTERNATE BGCOLOR="WHITE">Search OpenFDA Application</MARQUEE></h1></font>
 <form action="search_active_ingredient">
     <p><h2>Search by the name of the active ingredient. A limit can be entered</h2></p>
-    Drug Label: <input name="Label"type="text"><br>
+    Drug: <input name="Label"type="text"><br>
     Limit: <input name="Limit"type="text"><br>
     <input type="submit">
 
@@ -30,8 +30,8 @@
 
 </form>
 
-<form action="search_manufacturer_list">
-    <p><h2>Search a drug by its manufacturer name</h2></p>
+<form action="search_manlist">
+    <p><h2>Search for a manufacturer list</h2></p>
     Manufacturer List: <input name="Manufacturerlist"type="text"><br>
     <input type="submit">
 
