--- a/openfda_final_basurilla/search.html
+++ b/openfda_final_basurilla/search.html
@@ -6,8 +6,31 @@
 </head>
 <body>
     <h1>Search OpenFDA Application</h1>
-<form action="search">
-    Drug Label: <input name="drug" type="text">
+    <marquee>Welcome to Search OpenFDA Application by Lasonata! Please, choose your request and enter a parameter</marquee>
+<form action="searchDrug">
+    <p><h2><span title="Get the drugs that have the active ingredient you enter. You can also especify a limit:">Active Ingredient</span></h2></p>
+    Active ingredient: <input name="active_ingredient" type="text">
+    Limit: <input name="limit" type="text">
+    <input type="submit">
+</form>
+<form action="searchCompany">
+    <p><h2><span title="Get the drugs that are produced by the company you enter. You can also especify a limit:">Company</span></h2></p>
+    Company: <input name="company" type="text">
+    Limit: <input name="limit" type="text">
+    <input type="submit">
+</form>
+<form action="listDrugs">
+    <p><h2><span title="Get a random list of drugs. You can also especify a limit">listDrug</span></h2></p>
+    Limit: <input name="limit" type="text">
+    <input type="submit">
+</form>
+<form action="listCompanies">
+    <p><h2><span title="Get a random list of companies. You can also especify a limit:">listCompanies</span></h2></p>
+    Limit: <input name="limit" type="text">
+    <input type="submit">
+</form>
+<form action="listWarnings">
+    <p><h2><span title="Get a random list of warnings. You can also especify a limit">listWarnings</span></h2></p>
     Limit: <input name="limit" type="text">
     <input type="submit">
 </form>
