--- a/openfda-project/manufacturer_name.html
+++ b/openfda-project/manufacturer_name.html
@@ -1,1 +1,1 @@
-<body style="background-color:lavender"><head><h1>DRUG'S BRAND NAMES</h1></head><ol><t><li>Quick Action<t><li>Senna S<t><li>Stool Softener<t><li>Pain Reliever Regular Strength
+<body style="background-color:lavender" xmlns=""><head><h1>DRUG'S BRAND NAMES</h1></head><ol><t><li>Quick Action<t><li>Senna S<t><li>Stool Softener<t><li>Pain Reliever Regular Strength
