--- a/openfda-project/search.html
+++ b/openfda-project/search.html
@@ -16,25 +16,34 @@
 </form>
 
 <form action="search_manufacturer">
-    <p><h2>Search by the name of the manufacturer of the drug. A limit can be entered</h2></p>
-    Manufacturer: <input name="Manufacturer"type="text"><br>
+    <p><h2>Search by the name of the company of the drug. A limit can be entered</h2></p>
+    Company: <input name="Manufacturer"type="text"><br>
     Limit: <input name="Limit"type="text"><br>
     <input type="submit">
 
 </form>
 
 <form action="search_druglist">
-    <p><h2>Search for a drug list</h2></p>
-    Drug List: <input name="Druglist"type="text"><br>
+    <p><h2>listDrugs</h2></p>
+    Limit: <input name="Druglist"type="text"><br>
     <input type="submit">
 
 </form>
 
 <form action="search_manlist">
-    <p><h2>Search for a manufacturer list</h2></p>
-    Manufacturer List: <input name="Manufacturerlist"type="text"><br>
+    <p><h2>listCompanies</h2></p>
+    Limit: <input name="Manufacturerlist"type="text"><br>
     <input type="submit">
 
 </form>
+
+<form action="search_warnlist">
+    <p><h2>listWarnings</h2></p>
+    Limit: <input name="warninglist"type="text"><br>
+    <input type="submit">
+
+</form>
+
+
 </body>
 </html>
