--- a/openfda-project/search.html
+++ b/openfda-project/search.html
@@ -7,6 +7,8 @@
 
     <font face="impact">
     <h1><MARQUEE WIDTH="55%" BEHAVIOR=ALTERNATE BGCOLOR="WHITE">Search OpenFDA Application</MARQUEE></h1></font>
+    <h3>Maximum limit: 100</h3>
+
 <form action="search_active_ingredient">
     <p><h2>Search by the name of the active ingredient. A limit can be entered</h2></p>
     Drug: <input name="Label"type="text"><br>
