--- a/openfda-project/active_ingredient.html
+++ b/openfda-project/active_ingredient.html
@@ -1,1 +1,1 @@
-<body style="background-color:indianred"><head><h1>DRUG'S BRAND NAMES</h1></head><ol><t><li>Aspirin Adult low strength<t><li>aspirin<t><li>Aspirin Enteric Coated<t><li>Aspirin Low Dose Safety Coated
+<body style="background-color:indianred"><head><h1>DRUG'S BRAND NAMES</h1></head><ol><t><li>Aspirin Adult low strength<t><li>aspirin<t><li>Aspirin Enteric Coated
