--- a/openfda-project/error.html
+++ b/openfda-project/error.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Error 404</title>
-    <h1>Error 404</h1>
-</head>
-<body>
-    <h2>Not found</h2>
-
-</body>
-</html>
+<head><title>Error 404</title><h1>Error 404</h1></head><body><h2>Not found</h2><h2>Probably the manufacturer doesn't exists or the limit introdued is too high (max: 100)</h2></body>
