--- a/openfda-project/error.html
+++ b/openfda-project/error.html
@@ -1,1 +1,1 @@
-<head><title>Error 404</title><h1>Error 404</h1></head><body><h2>Not found</h2><h2>Probably the manufacturer doesn't exists or the limit introdued is too high (max: 100)</h2></body>
+<head><title>Error 404</title><h1>Error 404</h1></head><body><h2>Not found</h2><h2>Wrong Path</h2></body>
