--- a/openfda-project/manufacturer_name.html
+++ b/openfda-project/manufacturer_name.html
@@ -1,1 +1,1 @@
-<body style="background-color:lavender"><head><h1>DRUG'S BRAND NAMES</h1></head><ol><t><li>Afrin No Drip Sinus Pump Mist<t><li>Tinactin<t><li>Aleve<t><li>Natazia
+<body style="background-color:lavender"><head><h1>DRUG'S BRAND NAMES</h1></head><ol><t><li>Ethereal Skin Calming Moisturizing Cream<t><li>Bathscriptions Daily Moisturizing<t><li>Hydra Bond Maximum Skin Therapy Cream<t><li>Footscriptions Foot Repair<t><li>Oxygen<t><li>Unknown<t><li>Unknown<t><li>Unknown<t><li>Unknown<t><li>Unknown
