--- a/openfda-project/search.html
+++ b/openfda-project/search.html
@@ -9,37 +9,37 @@
     <h1><MARQUEE WIDTH="55%" BEHAVIOR=ALTERNATE BGCOLOR="WHITE">Search OpenFDA Application</MARQUEE></h1></font>
     <h3>Maximum limit: 100</h3>
 
-<form action="search_active_ingredient">
+<form action="searchDrug">
     <p><h2>Search by the name of the active ingredient. A limit can be entered</h2></p>
-    Drug: <input name="Label"type="text"><br>
-    Limit: <input name="Limit"type="text"><br>
+    Drug: <input name="active_ingredient"type="text"><br>
+    Limit: <input name="limit"type="text"><br>
     <input type="submit">
 
 </form>
 
-<form action="search_manufacturer">
+<form action="searchCompany">
     <p><h2>Search by the name of the company of the drug. A limit can be entered</h2></p>
-    Company: <input name="Manufacturer"type="text"><br>
-    Limit: <input name="Limit"type="text"><br>
+    Company: <input name="company"type="text"><br>
+    Limit: <input name="limit"type="text"><br>
     <input type="submit">
 
 </form>
 
-<form action="search_druglist">
+<form action="listDrugs">
     <p><h2>listDrugs</h2></p>
     Limit: <input name="Druglist"type="text"><br>
     <input type="submit">
 
 </form>
 
-<form action="search_manlist">
+<form action="listCompanies">
     <p><h2>listCompanies</h2></p>
     Limit: <input name="Manufacturerlist"type="text"><br>
     <input type="submit">
 
 </form>
 
-<form action="search_warnlist">
+<form action="listWarnings">
     <p><h2>listWarnings</h2></p>
     Limit: <input name="warninglist"type="text"><br>
     <input type="submit">
